# xim

./: .gitignore  .travis.yml  Cargo.toml  README.md
docs/: xim.org
src/: main.rs  xim.rs  xmi.rs
src/view/: client.rs  mod.rs  view.rs
