[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>",
           "Manoel Vilela <manoel_vilela@engineer.com>",
           "Leonardo Neumann <leonardohn@null.net>"]
name = "xim"
version = "0.1.0"

[dependencies]
clap = "2.29.2"
error-chain = "0.11.0"
futures = "0.1.18"
log = "0.4.1"
log4rs = "0.8.0"
termion = "1.5.1"
tokio-core = "0.1.12"
xdg = "2.1.0"

[dependencies.xrl]
git = "https://github.com/little-dude/xrl"
